Closed Bug 342711 Opened 19 years ago Closed 18 years ago

Thunderbird displays useless "Don't import anything" dialog on first launch

Categories

(Thunderbird :: Migration, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mpt, Assigned: timeless)

References

()

Details

Attachments

(1 file, 1 obsolete file)

Thunderbird 1.5.0.4, Ubuntu 6.06 I just installed Thunderbird, and the first thing it did when I ran it was show me a dialog asking what I wanted to import. That would have been great (I'd like my Evolution settings imported), but there was only one radio button in the dialog: "Don't import anything". If Thunderbird can't find anything to import, it would be much better not to show this window at all.
*** Bug 344133 has been marked as a duplicate of this bug. ***
i hit this bug while using thunderbird for the first time on opensolaris. it was a terrible first run experience.
Attachment #229710 - Flags: superreview?
Attachment #229710 - Flags: review?
Attachment #229710 - Flags: superreview?(bienvenu)
Attachment #229710 - Flags: superreview?
Attachment #229710 - Flags: review?(bienvenu)
Attachment #229710 - Flags: review?
Attachment #229710 - Flags: superreview?(bienvenu)
Attachment #229710 - Flags: superreview+
Attachment #229710 - Flags: review?(bienvenu)
Attachment #229710 - Flags: review+
Whiteboard: [checkin needed]
Assignee: mscott → timeless
OS: Linux → All
Hardware: PC → All
Comment on attachment 229710 [details] [diff] [review] look through the known importers before deciding to construct a useless dialog mozilla/mail/components/migration/src/nsProfileMigrator.cpp 1.10
Attachment #229710 - Attachment is obsolete: true
Whiteboard: [checkin needed]
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Verified FIXED with Thunderbird version 3 alpha 1 (20060731).
Status: RESOLVED → VERIFIED
Comment on attachment 229710 [details] [diff] [review] look through the known importers before deciding to construct a useless dialog We should get this in on branch.
Attachment #229710 - Flags: approval-thunderbird2?
Attachment #229710 - Flags: approval-thunderbird2? → approval-thunderbird2+
timeless: this has approval‑thunderbird2+
Whiteboard: [checkin needed (1.8 branch)]
This probably caused bug 367723.
Depends on: 367723
Comment on attachment 229710 [details] [diff] [review] look through the known importers before deciding to construct a useless dialog Apparently this breaks importing if data exists to import. (See bug 367723.) Fortunately, timeless did NOT check this in on the 1.8 branch. Removing approval flag until we can figure out what to do.
Attachment #229710 - Flags: approval-thunderbird2+
Whiteboard: [checkin needed (1.8 branch)]
This patch is a backport of the original patch against the 1.8 branch (well, there was not much to change ;))
Attachment #331562 - Flags: review?(dmose)
will this patch for 1.8 be included?
Probably not as the 1.8 branch is for security and crash fixes. This is polish, and thunderbird3 is scheduled to be out in not so many months anyway.
Comment on attachment 331562 [details] [diff] [review] Patch against 1.8 branch Comment 12 sounds right to me: I don't think we'd take this on branch. Because we're resource constrained the only way we can ensure sufficient branch stability is by minimizing the amount of patches we take there. Sorry for not responding to the review request sooner.
Attachment #331562 - Flags: review?(dmose)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: