Bug 342711 Thunderbird displays useless "Don't import anything" dialog on first launch r=bienvenu sr=bienvenu